# pokemon_tcg_engine

./: ability.py  card.py  config.py  deck.py  enumerators.py  game.py  main.py  player.py  pyproject.toml  readme.md
cards/: card.py  energy_card.py  pokemon_card.py  trainer_card.py
open_ai_suggestions/: add cards.py  add_cards.py  evaluation.py  final_folder_structure.txt  montecarlo_search_tree.py
tests/: test_ability.py  test_card.py
tests/cards/: test_card.py  test_energy_card.py  test_pokemon_card.py
